still trying to fix the image. it's not showing up in production

--- a/src/client/scss/main-desktop.scss
+++ b/src/client/scss/main-desktop.scss
@@ -21,6 +21,10 @@
         grid-column-end: 6;
     }
 
+    img {
+        width: 30%;
+    }
+
     #nav-container {
         @include center(row);
         grid-column-start: 1;
