--- a/src/client/scss/main-mobile.scss
+++ b/src/client/scss/main-mobile.scss
@@ -14,6 +14,10 @@
         grid-column-end: 6;
     }
 
+    img {
+        width: 100%;
+    }
+
     .nav-mobile {
         color: white;
         font-size: 20px;
